--- a/cloudconnector/pom.xml
+++ b/cloudconnector/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>com.github.haruntuncay</groupId>
             <artifactId>socket.io-client</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
